# Superflow

./: .gitignore  CMakeLists.txt  README.md
Root/: Cut.cxx  EventFlags.cxx  LinkDef.h  PhysicsTools.cxx  SuperTools.cxx  Superflow.cxx  SuperflowBase.cxx  Superlink.cxx  Supersys.cxx  Supervar.cxx  Superweight.cxx  input_options.cxx
Superflow/: Cut.h  DataDefinitions.h  EventFlags.h  LeptonTruthDefinitions.h  PhysicsTools.h  StringTools.h  SuperTools.h  Superflow.h  SuperflowBase.h  Superlink.h  Supersys.h  Supervar.h  Superweight.h  Trigger.h  input_options.h
cmt/: Makefile.RootCore
macros/: restframesSTOP2L.C
python/: gen_trigger_vars.py
run/: CondorSFlow.sh  GetFileList.py  GetJobLogName.py  RunCondorSFlow.py  RunSuperflow.sh  RunSuperflowFAX.sh  SubmitCondorSF.py  SubmitCondorSF_queue.py  Superflow.sh  SuperflowFAX.sh  add_prefix_to_filelists.py  condor_sf.py  get_filelist.py  get_joblog_name.py  submit_condor.py  submit_to_condor.py  testSF.sh
scripts/: get_superflow_dep.sh  install_RestFrames.sh
util/: CombineTrees.cxx  MakeFileLists.cxx  Plots_EWKPaper.cxx  Plots_Zbalance.cxx  SSFakes.cxx  SuperflowAna.cxx  SuperflowFakes.cxx  SuperflowQFlip.cxx  SuperflowQuickcuts.cxx  newSysAna.cxx  restframesAna.cxx  stop2l8Ana.cxx  testRestFrames.cxx  toyNtAna.cxx  toyNtAnaSignal.cxx  wwlikeAna.cxx
